--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-merriweather);
+  --font-mono: var(--font-merriweather);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -139,6 +139,7 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    font-family: var(--font-merriweather), serif;
   }
   body {
     @apply bg-background text-foreground;
